; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/p/extr_..archz80z80.c_z80_op_24_branch_index_res.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/p/extr_..archz80z80.c_z80_op_24_branch_index_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @z80_op_24_branch_index_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @z80_op_24_branch_index_res(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 64
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  store i32 %7, i32* %2, align 4
  br label %27

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  switch i32 %9, label %18 [
    i32 70, label %10
    i32 78, label %11
    i32 86, label %12
    i32 94, label %13
    i32 102, label %14
    i32 110, label %15
    i32 118, label %16
    i32 126, label %17
  ]

10:                                               ; preds = %8
  store i32 64, i32* %2, align 4
  br label %27

11:                                               ; preds = %8
  store i32 65, i32* %2, align 4
  br label %27

12:                                               ; preds = %8
  store i32 66, i32* %2, align 4
  br label %27

13:                                               ; preds = %8
  store i32 67, i32* %2, align 4
  br label %27

14:                                               ; preds = %8
  store i32 68, i32* %2, align 4
  br label %27

15:                                               ; preds = %8
  store i32 69, i32* %2, align 4
  br label %27

16:                                               ; preds = %8
  store i32 70, i32* %2, align 4
  br label %27

17:                                               ; preds = %8
  store i32 71, i32* %2, align 4
  br label %27

18:                                               ; preds = %8
  %19 = load i32, i32* %3, align 4
  %20 = icmp sgt i32 %19, 127
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i32, i32* %3, align 4
  %23 = sub nsw i32 %22, 56
  br label %25

24:                                               ; preds = %18
  br label %25

25:                                               ; preds = %24, %21
  %26 = phi i32 [ %23, %21 ], [ 200, %24 ]
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %17, %16, %15, %14, %13, %12, %11, %10, %6
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
